kimterpreting/static/animations.css
@import url('https://fonts.googleapis.com/css2?family=Playball&display=swap');

.header-logo {
  font-size: calc(1em + 10vw);
  left: 50%;
  -ms-transform: translate(-50%, +150%);
  -webkit-transform: translate(-50%, +150%);
  -moz-transform: translate(-50%, +150%);
  -o-transform: translate(-50%, +150%);
  transform: translate(-50%, +150%);
  visibility: hidden;
  opacity: 0;
  transition: visibility 1s, opacity 3s ease;
  animation-name: loadAnimation;
  animation-duration: 2s;
  animation-delay: 4s;
  animation-timing-function: ease;
  animation-fill-mode: forwards;
}

.header-links-container {
  visibility: hidden;
  opacity: 0;
  animation-name: fadeIn;
  animation-duration: 3s;
  animation-delay: 4s;
  animation-timing-function: ease;
  animation-fill-mode: forwards;
}

.initial-fade-in {
  background-color: transparent;
  animation-name: headerFadeIn;
  animation-duration: 3s;
  animation-delay: 4s;
  animation-fill-mode: forwards;
}

.title-content {
  visibility: hidden;
  opacity: 0;
  transition: visibility 1s, opacity 3s ease;
  animation-name: fadeIn;
  animation-duration: 3s;
  animation-delay: 6s;
  animation-timing-function: ease;
  animation-fill-mode: forwards;
}

.animation-4 {
  visibility: hidden;
  opacity: 0;
  animation-name: fadeIn;
  animation-duration: 3s;
  animation-delay: 8s;
  animation-timing-function: ease;
  animation-fill-mode: forwards;
}

@keyframes loadAnimation {
  0% {

  }
  100% {
    font-size: 3rem;
    left: 5vw;
    -ms-transform: translateY(-50%);
    -webkit-transform: translateY(-50%);
    -moz-transform: translateY(-50%);
    -o-transform: translateY(-50%);
    transform: translateY(-50%);
  }
}

@keyframes fadeIn {
  0% {
    visibility: hidden;
    opacity: 0;
  }
  100% {
    visibility: visible;
    opacity: 1;
  }
}

@keyframes headerFadeIn {
  100% {
    background-color: rgba(0,0,0,0.3);
    box-shadow: 10px 0px 5px black;
  }
}

@media only screen and (min-width: 500px) {
  .header-logo {
    -ms-transform: translate(-50%, +70%);
    -webkit-transform: translate(-50%, +70%);
    -moz-transform: translate(-50%, +70%);
    -o-transform: translate(-50%, +70%);
    transform: translate(-50%, +70%);
  }
}

@media only screen and (min-width: 700px) {
  .header-logo {
    -ms-transform: translate(-50%, +50%);
    -webkit-transform: translate(-50%, +50%);
    -moz-transform: translate(-50%, +50%);
    -o-transform: translate(-50%, +50%);
    transform: translate(-50%, +50%);
  }
}

